# Dbc2MySQL

./: CMakeLists.txt  README.md
dep/: PackageList.txt
dep/tinyxml/: CMakeLists.txt  LICENSE.txt
src/: CMakeLists.txt  Db2File.cpp  Db2File.h  Dbc2MySql.cpp  DbcFile.cpp  DbcFile.h  Structure.xsd  StructureCata.xml  StructureWotLK.xml  System.cpp  System.h  WoWClientDBFile.cpp  WoWClientDBFile.h  defines.h  dirent.h
